--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -1,4 +1,13 @@
 .section {
     height: 100vh;
-    background: #13315C;
+
+    &--primary-blue {
+        background: $primary-background;
+        color: #ffffff;
+    }
+
+    &--white {
+        background: #ffffff;
+        color: $primary-background;
+    }
 }
