--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -1,6 +1,7 @@
 $primary-background: #13315C;
 $secondary: #8DA9C4;
+$tertiary: #4285F4;
 
-$primary-font: 'Poppins', sans-serif;
+$primary-font: 'Noto Sans', sans-serif;
 
 $btn-padding: 1rem;
