--- a/src/styles/abstract/_animations.scss
+++ b/src/styles/abstract/_animations.scss
@@ -10,8 +10,30 @@
     0% {
         transform: rotate(0deg);
     } 50% {
-        transform: rotate(45deg);
+        transform: rotate(35deg);
     } 100% {
         transform: rotate(0deg);
+    }
+}
+
+@keyframes navHamburgerSpanLoadHalf {
+    0% {
+        width: 0%;
+    }
+    50% {
+        width: 30px;
+    }
+    100% {
+        width: 15px;
+    }
+}
+
+
+@keyframes navHamburgerSpanLoadFull {
+    0% {
+        width: 0px;
+    }
+    100% {
+        width: 30px;
     }
 }
