--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,12 +13,14 @@ Components
 @import "../components/nav.scss";
 @import "../components/section.scss";
 @import "../components/scrollbar.scss";
+@import "../components/footerDrawer.scss";
 
 /*****
 Fonts
 ******/
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 @import url('https://fonts.googleapis.com/css?family=Megrim&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans|Quicksand&display=swap');
 
 /*****
 Page Specific Styles
