--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -3,5 +3,6 @@ $secondary: #8DA9C4;
 $tertiary: #4285F4;
 
 $primary-font: 'Noto Sans', sans-serif;
+$primary-font-size-lrg: 3rem;
 
 $btn-padding: 1rem;
