--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -47,3 +47,7 @@ html, body {
     font-family: $primary-font;
     background: $primary-background;
 }
+
+h1 {
+    font-size: $primary-font-size-lrg;
+}
