--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -31,7 +31,7 @@
         list-style: none;
 
         &--sidebar {
-            color: #13315C;
+            color: #ffffff;
 
             flex-flow: column;
         }
@@ -40,6 +40,10 @@
     &__item {
         font-weight: bold;
         margin: 0 3rem;
+
+        &--sidebar {
+            margin: 1rem 0;
+        }
     }
     
     /* Navigation Mobile Mode */
@@ -52,24 +56,30 @@
     }
 
     &__sidebar {
-        display: none;
-
         position: fixed;
         top: 0;
         right: 0;
         height: 100vh;
-        width: 40%;
-
+        width: 0;
+        
+        display: flex;
         align-items: center;
+        justify-content: center;
         
-        background: #ffffff;
-        
+        color: $tertiary;
+        background: rgba(0, 0, 0, 0.8);
+
+        overflow: hidden;
+        z-index: 10;
+        transition: width .2s;
     }
 
     &__hamburger {
         display: flex; 
         flex-flow: column;
         align-items: flex-end;
+        z-index: 100;
+        cursor: pointer;
 
         & > span {
             display: inline-block;
@@ -77,7 +87,7 @@
             margin: 3px 0;
             width: 30px;
             background: #ffffff; 
-            transition: width 1s ease;
+            transition: width .5s ease;
         }
 
         & > span:nth-child(1) {
@@ -92,6 +102,23 @@
         & > span:nth-child(3) {
             width: 15px;
             animation: navHamburgerSpanLoadHalf 1s ease;  
+        }
+
+        &--close {
+            transition: all .5s ease;
+            & > span:nth-child(1) {
+                transform: translateY(7px) rotate(45deg);
+                width: 30px;
+            }
+
+            & > span:nth-child(2) {
+                visibility: hidden;
+            }
+
+            & > span:nth-child(3) {
+                transform: translateY(-10px) rotate(-45deg);
+                width: 30px;
+            }
         }
     }
 }
