--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -1,6 +1,20 @@
 .section {
     height: 100vh;
 
+    &__header {
+        & h1::after {
+            content: "";
+            display: inline-block;
+            vertical-align: middle;
+            width: 45%;
+            height: 2px;
+            margin: 0 0 0 1rem;
+            background: #ffffff;
+
+            transition: width 1s ease;
+        }
+    }
+
     &--primary-blue {
         background: $primary-background;
         color: #ffffff;
