--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -1,5 +1,10 @@
 .section {
     height: 100vh;
+    padding: 2rem 0;
+
+    @include breakpoint(phone) {
+        height: 100%;
+    }
 
     &__header {
         & h1::after {
