--- a/src/styles/abstract/_animations.scss
+++ b/src/styles/abstract/_animations.scss
@@ -15,6 +15,38 @@
             transition: all .5s cubic-bezier(0.25, 0.25, 0.5, 1.9);
         }
     }
+
+    &--fadeInDown {
+        transition: transform .5s ease;
+        animation: fadeInDown .5s ease;
+    }
+
+    &--fadeInRight {
+        transition: transform .5s ease;
+        animation: fadeInRight .5s ease;
+    }
+}
+
+@keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px);
+    } 
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(-20px);
+    } 
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
 
 @keyframes wave {
