Updated filenames and added smooth scroll

--- a/src/styles/abstract/_utils.scss
+++ b/src/styles/abstract/_utils.scss
@@ -26,7 +26,7 @@
 
 /* Colour Styles */
 .color-primary {
-    background: $primary-background;
+    // background: $primary-background;
 }
 
 /* Font Size Styles */
@@ -54,7 +54,7 @@
 /* Color Styles */
 .color {
     &--tertiary {
-        color: $tertiary;
+        // color: $tertiary;
     }
 
     &--white {
