--- a/src/styles/components/_footerDrawer.scss
+++ b/src/styles/components/_footerDrawer.scss
@@ -1,17 +1,22 @@
 .drawer {
-    background: $primary-background;
+    // background: $primary-background;
     box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.7);
     padding: .5rem;
     border-radius: 30px;
 
     &__toggle {
-        color: #ffffff;
+        // color: $primary-font;
+        cursor: pointer;
+
+        &:focus {
+            outline: none;
+        }
 
         & img {
             display: block;
             width: 100%;
             height: 100%;
-            border: 1.5px solid #ffffff;
+            // border: 1.5px solid $secondary;
             border-radius: 100%;
             padding: 1rem;
         }
@@ -22,6 +27,7 @@
         flex-direction: column;
         overflow: hidden;
         max-height: 0;
+        margin-bottom: 2px;
         
         transition: max-height .1s cubic-bezier(.53,-0.29,.61,1.84);
 
@@ -34,9 +40,10 @@
             padding: 1rem 0;
             margin: 2px 0;
             border-radius: 100%;
-            border: 1.5px solid #ffffff;
+            // border: 1.5px solid $secondary;
 
             & img {
+                display: block;
                 width: auto;
             }
         }
