--- a/src/styles/components/_scrollbar.scss
+++ b/src/styles/components/_scrollbar.scss
@@ -16,6 +16,7 @@ Custom Scroll Bar
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
+  border-radius: 1rem;
 }
 
 /* Handle on hover */
