--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -34,7 +34,7 @@
                 top: 5px;
                 left: 28%;
                 content: '';
-                border: 2px solid #ffffff;
+                // border: 2px solid $secondary;
                 height: 95%;
                 width: 50%;
             }
