--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -16,7 +16,7 @@
 
         @include breakpoint(phone) {
             & h2 {
-                color: $secondary;
+                // color: $secondary;
             }
 
             & p {
