--- a/src/styles/abstract/_animations.scss
+++ b/src/styles/abstract/_animations.scss
@@ -9,7 +9,7 @@
         display: inline-block;
 
         &:hover {
-            color: $tertiary;
+            // color: $tertiary;
             font-weight: bold;
             transform: rotate(360deg);
             transition: all .5s cubic-bezier(0.25, 0.25, 0.5, 1.9);
