--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,38 +1,3 @@
-/*****
-Abstract
-******/
-@import "../abstract/variables.scss";
-@import "../abstract/mixins.scss";
-@import "../abstract/utils.scss";
-@import "../abstract/animations.scss";
-
-/*****
-Components
-******/
-@import "../components/btn.scss";
-@import "../components/nav.scss";
-@import "../components/section.scss";
-@import "../components/scrollbar.scss";
-@import "../components/footerDrawer.scss";
-
-/*****
-Fonts
-******/
-@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
-@import url('https://fonts.googleapis.com/css?family=Megrim&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans|Quicksand&display=swap');
-
-/*****
-Page Specific Styles
-******/
-@import "../pages/landing.scss";
-@import "../pages/about.scss";
-
-/*****
-Vendor / Third Party Custom Styles
-******/
-@import "../vendor/typed.scss";
-
 * {
     padding: 0;
     margin: 0;
@@ -45,12 +10,12 @@ html, body {
     height: 100%;
     width: 100%;
     font-size: 62.5%;
-    font-family: $primary-font;
-    background: $primary-background;
+    // font-family: $primary-font-family;
+    // background: $primary-background;
 }
 
 h1 {
-    font-size: $primary-font-size-lrg;
+    // font-size: $primary-font-size-lrg;
 }
 
 img {
