added theme provider, updated landing page for mobile/desktop responsive, light and dark styles

--- a/src/styles/abstract/_mixins.scss
+++ b/src/styles/abstract/_mixins.scss
@@ -27,7 +27,7 @@
   }
 
   @if $breakpoint == desktop {
-    @media only screen and (min-width: 64em) and (max-width: 114em) {
+    @media only screen and (min-width: 64em) {
       @content;
     }
   }
