--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -10,12 +10,12 @@ html, body {
     height: 100%;
     width: 100%;
     font-size: 62.5%;
-    // font-family: $primary-font-family;
-    // background: $primary-background;
+    font-family: $primary-font-family;
+    background: $light-background-color;
 }
 
 h1 {
-    // font-size: $primary-font-size-lrg;
+    font-size: $primary-font-size-lrg;
 }
 
 img {
