--- a/src/styles/abstract/_utils.scss
+++ b/src/styles/abstract/_utils.scss
@@ -12,12 +12,24 @@
     margin-top: 3rem;
 }
 
-.margin-l-md {
-    margin-left: 3rem;
-}
-
 .margin-t-sm {
     margin-top: 1rem;
+}
+
+.margin-b-lg {
+    margin-bottom: 8rem;
+}
+
+.margin-b-md {
+    margin-bottom: 3rem;
+}
+
+.margin-b-sm {
+    margin-bottom: 1rem;
+}
+
+.margin-l-md {
+    margin-left: 3rem;
 }
 
 .margin-l-sm {
@@ -31,7 +43,11 @@
 
 /* Font Size Styles */
 .fsize-l {
-    font-size: 2.5rem;
+    font-size: 3rem;
+
+    @include breakpoint(desktop) {
+        font-size: 6rem;
+    }
 }
 
 .fsize-m {
@@ -51,13 +67,8 @@
     flex-direction: column;
 }
 
-/* Color Styles */
 .color {
-    &--tertiary {
-        // color: $tertiary;
-    }
-
     &--white {
-        color: #ffffff;
+        color: #ffffff !important;
     }
 }
