--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -9,16 +9,27 @@
     width: 100%;
     z-index: 150;
     
-    // background: $primary-background;
-    // color: $primary-font;
     padding: 3rem 10rem;
 
     @include breakpoint(phone) {
         display: none;
     }
 
+    @include breakpoint(tablet-landscape) {
+        padding: 1.5rem 2.5rem;
+    }
+
+    @include breakpoint(desktop) {
+        padding: 1.5rem 10rem;
+    }
+
     &__logo {
         flex-grow: 1;
+
+        & a {
+            text-decoration: none;
+            font-weight: bold;
+        }
 
         &-text {
             font-family: 'Megrim', sans-serif;
@@ -38,7 +49,6 @@
         list-style: none;
 
         &--sidebar {
-            // color: $primary-font;
             flex-flow: column;
         }
     }
@@ -48,7 +58,6 @@
         margin: 0 3rem;
 
         & a {
-            // color: $primary-font;
             text-decoration: none;
         }
 
@@ -77,7 +86,6 @@
         align-items: center;
         justify-content: center;
         
-        // color: $tertiary;
         background: rgba(0, 0, 0, 0.8);
 
         overflow: hidden;
@@ -97,7 +105,6 @@
             height: 3px;
             margin: 3px 0;
             width: 30px;
-            // background: $secondary; 
             transition: width .5s ease;
         }
 
