--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -1,13 +1,34 @@
 .landing {
-    &__header {
+    &__content {
         & h2 {
             font-size: 2rem;
             animation-duration: .5s;
+
+            @include breakpoint(desktop) {
+                font-size: 4rem;
+
+                & > span {
+                    font-size: 3rem;
+                }
+            }
         }
 
         & h1 {
             font-size: 2.5rem;
             animation-duration: 1s;
+        }
+
+        @include breakpoint(desktop) {
+            padding: 0 3rem 0 0;
+            width: 85%;
+            display: flex;
+            flex-flow: column;
+        }
+    }
+
+    &__text {
+        @include breakpoint(desktop) {
+            width: 100%;
         }
     }
 
@@ -15,10 +36,6 @@
         margin: 4rem 0 0 0;
 
         @include breakpoint(phone) {
-            & h2 {
-                // color: $secondary;
-            }
-
             & p {
                 font-size: 1.2rem;
                 
@@ -29,6 +46,14 @@
 
             & img {
                 width: 70%;
+            }
+        }
+
+        @include breakpoint(desktop) {
+            display: flex;
+
+            & p {
+                font-size: 2rem;
             }
         }
     }
@@ -42,6 +67,17 @@
     }
 
     &__cta {
-        
+        width: 100%;
+
+        display: flex;
+
+        & a {
+            margin-top: 1.5rem;
+
+            @include breakpoint(desktop) {
+                width: 35%;
+                margin-top: 6rem;
+            }
+        }
     }
 }
