--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -15,9 +15,9 @@ $dark-secondary-color: #ffffff;
 $dark-tertiary-color: #4285F4;
 
 /* Fonts */
-$primary-font-family: 'Poppins', sans-serif;
+$primary-font-family: 'SF UI Text Regular', sans-serif;
 $primary-font-size-lrg: 2.5rem;
-$secondary-font-family: 'Noto Sans', sans-serif;
+$secondary-font-family: 'Roboto', sans-serif;
 
 /* Font  Sizes */
 $lg-font-size: 3rem;
