--- a/src/styles/components/_btn.scss
+++ b/src/styles/components/_btn.scss
@@ -6,6 +6,11 @@
     text-align: center;
     cursor: pointer;
     text-decoration: none;
+    transition: opacity 1s ease;
+
+    &:hover {
+        opacity: 0.7;
+    }
 
     &--primary {
         border: 0;
