--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -1,26 +1,45 @@
 .nav {
     position: fixed;
-    top: 0;
-    left: 0;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     
-    width: 100%;
-    z-index: 150;
-    
-    padding: 3rem 10rem;
+    width: 8rem;
+    height: 100vh;
 
-    @include breakpoint(phone) {
-        display: none;
+    z-index: 999;
+    transition: width 200ms ease;
+    
+    cursor: pointer;
+    
+    &:hover {
+        width: 24rem;
     }
 
-    @include breakpoint(tablet-landscape) {
-        padding: 1.5rem 2.5rem;
+    &:hover + main {
+        margin-left: 24rem;
+        background: rgba($color: #000000, $alpha: 0.2);
+        filter: blur(40px);
+    }
+
+    &:hover .nav__link-text {
+        display: inline;
+    }
+
+    &:hover .nav__logo-text {
+        display: inline;
+        left: 0px;
+    }
+
+    @include breakpoint(phone) {
+        bottom: 0;
+        width: 100vw;
+        height: 8rem;
     }
 
     @include breakpoint(desktop) {
-        padding: 1.5rem 10rem;
+        top: 0;
     }
 
     &__logo {
@@ -33,7 +52,7 @@
 
         &-text {
             font-family: 'Megrim', sans-serif;
-            font-size: 4rem;
+            font-size: 2.2rem;
             text-transform: uppercase;
 
             @include breakpoint(phone) {
@@ -43,100 +62,57 @@
     }
 
     &__list {
-        display: flex;
-        align-items: center;
-
         list-style: none;
-
-        &--sidebar {
-            flex-flow: column;
-        }
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+        width: 100%;
     }
 
     &__item {
+        width: 100%;
         font-weight: bold;
-        margin: 0 3rem;
 
         & a {
             text-decoration: none;
         }
 
-        &--sidebar {
-            margin: 1rem 0;
+        &:first-child {
+            filter: grayscale(0%) opacity(1);
+            background: rgba($color: #000000, $alpha: 0.5);
+            color: #ffffff;
         }
-    }
-    
-    /* Navigation Mobile Mode */
-    &--mobile {
-        display: none;
-        padding: 2rem 4rem;
-        @include breakpoint(phone) {
-            display: flex;
+
+        &:last-child {
+            margin: auto;
         }
     }
 
-    &__sidebar {
-        position: fixed;
-        top: 0;
-        right: 0;
-        height: 100vh;
-        width: 0;
-        
+    &__link {
         display: flex;
         align-items: center;
-        justify-content: center;
+        height: 5rem;
+        color: #ffffff;
+        text-decoration: none;
+        filter: grayscale(100%) opacity(0.7);
+        transition: 200ms;
         
-        background: rgba(0, 0, 0, 0.8);
-
-        overflow: hidden;
-        z-index: 10;
-        transition: width .2s;
-    }
-
-    &__hamburger {
-        display: flex; 
-        flex-flow: column;
-        align-items: flex-end;
-        z-index: 100;
-        cursor: pointer;
-
-        & > span {
-            display: inline-block;
-            height: 3px;
-            margin: 3px 0;
-            width: 30px;
-            transition: width .5s ease;
+        &:hover {
+            filter: grayscale(0%) opacity(1);
+            background: rgba($color: #000000, $alpha: 0.5);
+            color: #ffffff;
         }
 
-        & > span:nth-child(1) {
-            width: 15px;
-            animation: navHamburgerSpanLoadHalf 1s ease;
+        & span {
+            display: none;
         }
 
-        & > span:nth-child(2) {
-            animation: navHamburgerSpanLoadFull 1s ease;
-        }
-
-        & > span:nth-child(3) {
-            width: 15px;
-            animation: navHamburgerSpanLoadHalf 1s ease;  
-        }
-
-        &--close {
-            transition: all .5s ease;
-            & > span:nth-child(1) {
-                transform: translateY(7px) rotate(45deg);
-                width: 30px;
-            }
-
-            & > span:nth-child(2) {
-                visibility: hidden;
-            }
-
-            & > span:nth-child(3) {
-                transform: translateY(-10px) rotate(-45deg);
-                width: 30px;
-            }
+        & i {
+            margin: 0 3rem;
+            font-size: 2rem;
         }
     }
 }
