--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -1,12 +1,13 @@
 .section {
-    height: 100vh;
+    height: 100%;
     padding: 0 0 1.5rem 0;
 
-    &:first-child {
-        margin-top: 11rem;
-    }
+    @include breakpoint(desktop) {
 
-    @include breakpoint(phone) {
+        &:first-child {
+            height: 100vh;
+        }
+
         height: 100%;
     }
 
@@ -21,11 +22,20 @@
             transition: width 1s ease;
         }
 
+        &-text {
+            font-size: 2.5rem;
+            font-family: 'SF UI Display Heavy';
+
+            @include breakpoint(desktop) {
+                font-size: 6rem;
+            }
+        }
+
         &--break::after {
             content: "";
             display: inline-block;
             vertical-align: middle;
-            width: 45%;
+            width: 20%;
             height: 2px;
             transition: width 1s ease;
         }
@@ -35,5 +45,9 @@
         @include breakpoint(desktop) {
             display: flex;
         }
+    }
+
+    &--grey {
+        background: #F9F9F9;
     }
 }
