--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,22 +1,17 @@
 .about {
     &__block {
         display: flex;
-        flex-direction: column;
         align-items: center;
 
         text-align: center;
         margin: 4rem 0;
 
-        & h2 {
-            margin: 1rem 0 1rem 0;
-        }
-
-        & p {
-
+        &-content {
+            width: 50%;
         }
 
         & img {
-            width: 70%;
+            width: 50%;
             margin-bottom: 1rem;
         }
 
@@ -25,7 +20,6 @@
 
             & > img {
                 position: relative;
-                width: 50%;
                 z-index: 11;
             }
 
