--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -1,38 +1,8 @@
 .landing {
-    &__content {
-        & h2 {
-            font-size: 2rem;
-            animation-duration: .5s;
-
-            @include breakpoint(desktop) {
-                font-size: 4rem;
-
-                & > span {
-                    font-size: 3rem;
-                }
-            }
-        }
-
-        & h1 {
-            font-size: 2.5rem;
-            animation-duration: 1s;
-        }
-
-        @include breakpoint(desktop) {
-            padding: 0 3rem 0 0;
-            width: 85%;
-            display: flex;
-            flex-flow: column;
-        }
-    }
-
-    &__text {
-        @include breakpoint(desktop) {
-            width: 100%;
-        }
-    }
-
+    
     &__body {
+        display: flex;
+        flex-wrap: wrap;
         margin: 4rem 0 0 0;
 
         @include breakpoint(phone) {
@@ -53,8 +23,50 @@
             display: flex;
 
             & p {
-                font-size: 2rem;
+                font-size: 1.8rem;
             }
+        }
+    }
+
+    &__content {
+
+        width: 50%; 
+
+        & h2 {
+            font-size: 2rem;
+            font-family: 'SF UI Display Heavy', sans-serif;
+            animation-duration: .5s;
+
+            @include breakpoint(desktop) {
+                font-size: 4rem;
+
+                & > span {
+                    font-size: 3rem;
+                }
+            }
+        }
+
+        & h1 {
+            font-size: 2.5rem;
+            animation-duration: 1s;
+
+            & span {
+                font-family: 'SF UI Display Heavy', sans-serif;
+                cursor: pointer;
+            }
+        }
+
+        @include breakpoint(desktop) {
+            padding: 0 3rem 0 0;
+            display: flex;
+            flex-flow: column;
+            justify-content: center;
+        }
+    }
+
+    &__text {
+        @include breakpoint(desktop) {
+            width: 100%;
         }
     }
 
@@ -62,8 +74,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-
-        margin: 3rem 0 0 0;
+        width: 50%; 
     }
 
     &__cta {
