--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,7 @@ Components
 @import "components/scrollbar";
 @import "components/footerDrawer";
 @import "components/tag";
+@import "components/websitestats";
 
 /*****
 Page Specific Styles
