--- a/src/styles/abstract/_utils.scss
+++ b/src/styles/abstract/_utils.scss
@@ -36,6 +36,10 @@
     margin-left: 1rem;
 }
 
+.margin-r-sm {
+    margin-right: 1rem;
+}
+
 /* Colour Styles */
 .color-primary {
     // background: $primary-background;
