responsive design started, updated license and readme

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,8 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-
-    font-size: 1.6rem;
 }
 
 html, body {
@@ -21,6 +19,10 @@ h1 {
 a {
     text-decoration: none;
     color: $dark-background-color;
+}
+
+p {
+    font-size: 1.6rem;
 }
 
 img {
