--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -1,13 +1,22 @@
 /* Featured Projects */
 .featured {
     &__project {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        
+        & img {
+            width: 80%;
+        }
+
         @include breakpoint(desktop) { 
             margin: 4rem 0;
-            display: flex;
-            align-items: center;
+
+            display: grid;
+            grid-template-columns: repeat(auto-fit, 50%);
 
             & img {
-                width: 50%;
+                width: 100%;
             }
         }
     }
@@ -15,6 +24,7 @@
     &__content {
         margin: 0 3rem;
         padding: 1rem 3rem;
+        width: 100%;
     }
 
     &__header {
@@ -51,19 +61,24 @@
 }
 
 .projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    &__cta {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 /* Non Featured Project */
 .project {
+    background: $dark-background-color;
+    color: white;
+    margin: 2rem 0;
+    border-radius: 3px;
+    padding: 2rem;
+    width: 100%;
+
     @include breakpoint(desktop) {
         margin: 2rem 5rem 2rem 0;
-        padding: 2rem;
-        background: $dark-background-color;
-        color: white;
-        border-radius: 3px;
         width: 30%;
         box-shadow: 10px 10px 10px rgba($color: #000000, $alpha: 0.3);
         transition: transform .2s ease-out;
@@ -77,6 +92,7 @@
 
     &__header {
         margin: 0 0 4rem 0;
+        display: flex;
 
         @include breakpoint(desktop) {
             display: flex;
@@ -88,6 +104,9 @@
         }
 
         & i {
+
+            font-size: 2rem;
+
             @include breakpoint(desktop) {
                 font-size: 2rem;
                 cursor: pointer;
@@ -99,6 +118,8 @@
         }
 
         & div {
+            flex: 1;
+
             @include breakpoint(desktop) {
                 flex: 1;
             }
