--- a/src/styles/components/_websitestats.scss
+++ b/src/styles/components/_websitestats.scss
@@ -21,6 +21,11 @@
 
     & span {
         flex: 1;
+        font-size: 1.2rem;
+
+        @include breakpoint(desktop) {
+            font-size: 1.6rem;
+        }
     }
 
     &__close {
